--- a/charts/frigate/values.yaml
+++ b/charts/frigate/values.yaml
@@ -21,7 +21,8 @@ env: {}
   # TZ: UTC
 
 # -- set environment variables from Secret(s)
-envFromSecrets: []
+envFromSecrets: 
+  - frigate
   # secrets are required before `helm install`
   # - frigate-rstp-credentials
 
