--- a/charts/frigate/templates/ingress.yaml
+++ b/charts/frigate/templates/ingress.yaml
@@ -36,7 +36,7 @@ spec:
         paths:
           {{- range .paths }}
           - path: {{ . }}
-            pathType: "ImplementationSpecific"
+            pathType: Prefix
             backend:
               service:
                 name: {{ $fullName }}
